Wrong init branch

--- a/Oponeo.Controllers/Oponeo.Controllers.csproj
+++ b/Oponeo.Controllers/Oponeo.Controllers.csproj
@@ -8,13 +8,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Oponeo.Contract\Oponeo.Contract.csproj" />
+      <ProjectReference Include="..\Oponeo.Contracts\Oponeo.Contracts.csproj" />
       <ProjectReference Include="..\Oponeo.Domain\Oponeo.Domain.csproj" />
     </ItemGroup>
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="11.0.1" />
-      <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="6.0.2" />
     </ItemGroup>
 
 </Project>
