--- a/Oponeo.Start/Oponeo.Start.csproj
+++ b/Oponeo.Start/Oponeo.Start.csproj
@@ -9,13 +9,12 @@
     <ItemGroup>
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.2.0" />
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
-        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.2" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Oponeo.Controllers\Oponeo.Controllers.csproj" />
-      <ProjectReference Include="..\Oponeo.Infastructure\Oponeo.Infastructure.csproj" />
+      <ProjectReference Include="..\Oponeo.Infrastructure\Oponeo.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
