--- a/Oponeo.Contracts/Oponeo.Contracts.csproj
+++ b/Oponeo.Contracts/Oponeo.Contracts.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Oponeo.Domain\Oponeo.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
