--- a/Oponeo.Controllers/Oponeo.Controllers.csproj
+++ b/Oponeo.Controllers/Oponeo.Controllers.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="11.0.1" />
+      <PackageReference Include="FluentValidation" Version="10.3.6" />
       <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="6.0.2" />
     </ItemGroup>
 
