--- a/Oponeo.Infrastructure/Oponeo.Infrastructure.csproj
+++ b/Oponeo.Infrastructure/Oponeo.Infrastructure.csproj
@@ -13,6 +13,8 @@
 
     <ItemGroup>
         <PackageReference Include="Autofac" Version="6.3.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.3" />
     </ItemGroup>
 
 </Project>
