--- a/Oponeo.Start/Oponeo.Start.csproj
+++ b/Oponeo.Start/Oponeo.Start.csproj
@@ -11,12 +11,19 @@
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
         <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.6" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.2" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.3">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Oponeo.Controllers\Oponeo.Controllers.csproj" />
       <ProjectReference Include="..\Oponeo.Infrastructure\Oponeo.Infrastructure.csproj" />
+      <ProjectReference Include="..\Oponeo.Migrations\Oponeo.Migrations.csproj" />
     </ItemGroup>
 
 </Project>
