--- a/Oponeo.Start/appsettings.json
+++ b/Oponeo.Start/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "OponeoSettings" : {
+//    "ConnectionString" : "Host=localhost;Port=5555;Database=Oponeo;Username=postgres;Password=passwor",
+    "ConnectionString" : "Server=localhost, 6666;Database=Oponeo_test;User Id=sa;Password=your_password123;"
+  }
 }
