MSSQL with integrated

--- a/Oponeo.Start/appsettings.json
+++ b/Oponeo.Start/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "OponeoSettings" : {
 //    "ConnectionString" : "Host=localhost;Port=5555;Database=Oponeo;Username=postgres;Password=passwor",
-    "ConnectionString" : "Server=localhost, 6666;Database=Oponeo_test;User Id=sa;Password=your_password123;"
+//    "ConnectionString" : "Server=localhost, 6666;Database=Oponeo;User Id=sa;Password=your_password123;",
+    "ConnectionString" : "Server=localhost;Database=Oponeo_exc;Trusted_Connection=True;"
   }
 }
