--- a/Oponeo.Start/appsettings.json
+++ b/Oponeo.Start/appsettings.json
@@ -9,6 +9,6 @@
   "OponeoSettings" : {
 //    "ConnectionString" : "Host=localhost;Port=5555;Database=Oponeo;Username=postgres;Password=passwor",
 //    "ConnectionString" : "Server=localhost, 6666;Database=Oponeo;User Id=sa;Password=your_password123;",
-    "ConnectionString" : "Server=localhost;Database=Oponeo_exc;Trusted_Connection=True;"
+    "ConnectionString" : "Server=localhost\\SQLEXPRESS;Database=Oponeo_exc;Trusted_Connection=True;"
   }
 }
