--- a/appsettings.json
+++ b/appsettings.json
@@ -15,6 +15,7 @@
   },
   "Auth0": {
     "Domain": "po-alea.eu.auth0.com",
-    "ClientId": "Wartosc na chat"
+//    "ClientId": "Wartosc na chat",
+    "ClientId": "COLcCrdKmqiXcXXFZscJYKxphqyVxiAk"
   }
 }
