--- a/appsettings.json
+++ b/appsettings.json
@@ -15,7 +15,6 @@
   },
   "Auth0": {
     "Domain": "po-alea.eu.auth0.com",
-//    "ClientId": "Wartosc na chat",
-    "ClientId": "COLcCrdKmqiXcXXFZscJYKxphqyVxiAk"
+    "ClientId": "Wartosc na chat"
   }
 }
