--- a/ConsoleIOOperationApp/ConsoleIOOperationApp.csproj
+++ b/ConsoleIOOperationApp/ConsoleIOOperationApp.csproj
@@ -7,4 +7,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="DistributedLock.Redis" Version="1.0.1" />
+    </ItemGroup>
+
 </Project>
